--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
