--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
     "koa": "^2.13.4",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
-    "koa-router": "^10.1.1"
+    "koa-router": "^10.1.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
     "@types/koa__cors": "^3.1.1",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.23",
     "koa-bodyparser": "^4.3.0",
     "uuid": "^8.3.2"
